updated new resume

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" id="navItem1" href="#aboutMeSection">About me</a>
                         <a class="nav-link" href="#skillsSection" id="navItem2">Skills</a>
                         <a class="nav-link" href="#projectsSection" id="navItem3">Projects</a>
-                        <a class="nav-link" href="#contactMeSection" id="navItem4">Contact me</a>
+                        <a class="nav-link" href="#contactMeSection" id="navItem4">Contact Me</a>
                     </div>
                 </div>
             </div>
