--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                                 <p class="skill-item1">Firebase</p>
                                 <p class="skill-item2">mySql</p>
                                 <p class="skill-item3">Data Structures</p>
+				<p class="skill-item4">Spring Boot</p>
+				<p class="skill-item1">React Js</p>
                             </div>
                         </div>
                     </div>
