--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-3 card3 mb-5 ml-4">
-                        <h5 class="pro-heading3">Festival website</h5>
-                        <p class="pro-para">In this project i described the importance and what people actually do on the
-                            occation of pongal,Click below to check out.</p>
+                        <h5 class="pro-heading3">NextTrends E-Commerce application</h5>
+                        <p class="pro-para">Created an E-commerce application that has almost all features that end
+                          customer wants , with help of react context, authentication,
+                           authorization, Routing etc concepts.</p>
                         <div class="end">
-                            <a class="pro-button3" href="https://github.com/Divya0701/Pongal.git" target="_blank">Click here</a>
+                            <a class="pro-button3" href="https://github.com/Divya0701/nextTrends" target="_blank">Click here</a>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 card1 mb-5 ml-4">
@@ -121,6 +122,15 @@
                             text is positive or negative using past training data.</p>
                         <div class="end">
                             <button class="pro-button2">Click here</button>
+                        </div>
+                    </div>
+		    <div class="col-12 col-md-3 card3 mb-5 ml-4">
+                        <h5 class="pro-heading2">Timer Hunt</h5>
+                        <p class="pro-para">This project is extension to existing E-Hour application, In this we
+added extra feature like adding minutes in daily work sheet,In this project I worked as a backend developer trainee at sails
+software solutions.</p>
+                        <div class="end">
+                           <a class="pro-button1" href="https://github.com/vvrkFSD/Sails-Time-Hunt-2021_22" target="_blank">Click here</a>
                         </div>
                     </div>
                 </div>
